?? ??? 2011, PHP 5.3.9

- Core:
  . Fixed bug #55874 (GCC does not provide __sync_fetch_and_add on some archs).
    (klightspeed at netspace dot net dot au)
  . Fixed bug #52624 (tempnam() by-pass open_basedir with nonnexistent
    directory). (Felipe)

- PHP-FPM SAPI:
  . Fixed bug #60179 (php_flag and php_value does not work properly). (fat)

- Intl:
  . Fixed bug #60192 (SegFault when Collator not constructed
    properly). (Florian)

- Gd:
  . Fixed bug #60160 (imagefill() doesn't work correctly
    for small images). (Florian)

- OpenSSL:
  . Fixed bug #60279 (Fixed NULL pointer dereference in
    stream_socket_enable_crypto, case when ssl_handle of session_stream is not
    initialized.) (shm)

- Oracle Database extension (OCI8):
  . Fixed bug #59985 (show normal warning text for OCI_NO_DATA).
    (Chris Jones)
    
- Phar:
  . Fixed bug #60261 (NULL pointer dereference in phar). (Felipe)

- Postgres:
  . Fixed bug #60244 (pg_fetch_* functions do not validate that row param 
    is >0). (Ilia)

- SOAP
  . Fixed bug #44686 (SOAP-ERROR: Parsing WSDL with references). (Dmitry)
  
- Tidy:
  . Fixed bug #54682 (Tidy::diagnose() NULL pointer dereference).
    (Maksymilian Arciemowicz, Felipe)

03 Nov 2011, PHP 5.3.9RC1

- Core:
  . Fixed bug #60139 (Anonymous functions create cycles not detected by the
    GC). (Dmitry)
  . Fixed bug #60120 (proc_open's streams may hang with stdin/out/err when 
    the data exceeds or is equal to 2048 bytes). (Pierre, Pascal Borreli)
  . Fixed bug #60019 (Function time_nanosleep() is undefined on OS X). (Ilia)
  . Fixed bug #55798 (serialize followed by unserialize with numeric object
    prop. gives integer prop). (Gustavo)
  . Fixed bug #55749 (TOCTOU issue in getenv() on Windows builds). (Pierre)
  . Fixed bug #55707 (undefined reference to `__sync_fetch_and_add_4' on Linux
    parisc). (Felipe)
  . Fixed bug #55674 (fgetcsv & str_getcsv skip empty fields in some
    tab-separated records). (Laruence)